# mcu_peripheral

./: CMakeLists.txt
cmake/modules/: Findlibmpsse.cmake  Findpigpio.cmake
examples/: adxl345.c  gpio.c  i2cdetect.c  tsl2561.c
include/mcu_peripheral/: log.h  mcu_peripheral.h  multi_impl.h  uri.h
src/: error.c  impl_libmpsse.c  impl_linuxdev.c  impl_pigpiod.c  log.c  mcu_peripheral.c  multi_impl.c  uri.c  utils.c  utils.h
